[package]
name = "wsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http2"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["full"] }
